--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "my-server",
-    "version": "1.3.0",
+    "version": "1.4.0",
     "description": "Simple server with keyboard interaction",
     "main": "src/server.js",
     "scripts": {
         "start": "node src/server.js",
-        "build": "pkg src/server.js --target win --output releases/kappapps-cli-1.3.0.exe"
+        "build": "pkg src/server.js --target win --output releases/kappapps-cli-1.4.0.exe"
     },
-    "author": "Votre Nom",
+    "author": "AProds",
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
