--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "my-server",
-    "version": "1.4.0",
+    "name": "KappappsIntercationsCLI",
+    "version": "1.5.0",
     "description": "Simple server with keyboard interaction",
     "main": "src/server.js",
     "scripts": {
         "start": "node src/server.js",
-        "build": "pkg src/server.js --target win --output releases/kappapps-cli-1.4.0.exe"
+        "build": "pkg src/server.js --target win --output releases/kappapps-cli-1.5.0.exe"
     },
     "author": "AProds",
     "license": "ISC",
@@ -18,6 +18,6 @@
         "uuid": "^10.0.0"
     },
     "bin": {
-        "my-server": "src/server.js"
+        "KappappsIntercationsCLI": "src/server.js"
     }
 }
